# carls-challenge

./: README.md  carl.cabal
app/: Main.hs
